--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-native-safe-area-helper",
   "version": "1.0.0",
   "description": "Module for measuring react-native safe area sizes",
-  "main": "index.js",
+  "main": "src/SafeAreaHelper.js",
   "scripts": {
-    "test": "npm test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,17 @@
     "area",
     "react"
   ],
-  "author": "Bolt <hi@bolt.ee>",
+  "author": "Bolt <hi@bolt.ee> (https://bolt.ee)",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/boltss/react-native-safe-area-helper/issues"
   },
-  "homepage": "https://github.com/boltss/react-native-safe-area-helper#readme"
+  "homepage": "https://github.com/boltss/react-native-safe-area-helper#readme",
+  "dependencies": {
+    "react": "16.2.0",
+    "react-native": "0.52.0"
+  },
+  "devDependencies": {
+    "flow-bin": "0.63.1"
+  }
 }
