:white_check_mark: Make Jest ignore build directory and node modules

--- a/package.json
+++ b/package.json
@@ -62,6 +62,10 @@
     },
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?react-native)"
+    ],
+    "testPathIgnorePatterns": [
+      "lib",
+      "node_modules"
     ]
   }
 }
